--- a/MongoDBClient/MongoDBClient.vcxproj.filters
+++ b/MongoDBClient/MongoDBClient.vcxproj.filters
@@ -39,9 +39,21 @@
     <ClCompile Include="mongodbclient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="page1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="page2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="page2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="page1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -51,16 +63,146 @@
     </QtMoc>
   </ItemGroup>
   <ItemGroup>
-    <QtUic Include="mongodbclient.ui">
-      <Filter>Form Files</Filter>
-    </QtUic>
-  </ItemGroup>
-  <ItemGroup>
     <QtRcc Include="mongodbclient.qrc">
+      <Filter>Resource Files</Filter>
+    </QtRcc>
+    <QtRcc Include="qdarkstyle\style.qrc">
       <Filter>Resource Files</Filter>
     </QtRcc>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MongoDBClient.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtUic Include="page1.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="page2.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="qdarkstyle\rc\up_arrow_disabled.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\Hmovetoolbar.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\stylesheet-branch-end.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\branch_closed-on.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\stylesheet-vline.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\branch_closed.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\branch_open-on.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\transparent.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\right_arrow_disabled.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\sizegrip.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\close.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\close-hover.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\close-pressed.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\down_arrow.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\Vmovetoolbar.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\left_arrow.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\stylesheet-branch-more.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\up_arrow.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\right_arrow.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\left_arrow_disabled.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\Hsepartoolbar.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\branch_open.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\Vsepartoolbar.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\down_arrow_disabled.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\undock.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\checkbox_checked_disabled.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\checkbox_checked_focus.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\checkbox_checked.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\checkbox_indeterminate.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\checkbox_indeterminate_focus.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\checkbox_unchecked_disabled.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\checkbox_unchecked_focus.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\checkbox_unchecked.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\radio_checked_disabled.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\radio_checked_focus.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\radio_checked.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\radio_unchecked_disabled.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\radio_unchecked_focus.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="qdarkstyle\rc\radio_unchecked.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="qdarkstyle\style.qss">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
