--- a/MongoDBClient/MongoDBClient.vcxproj.filters
+++ b/MongoDBClient/MongoDBClient.vcxproj.filters
@@ -50,15 +50,15 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="page2.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="page1.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="mongodbclient.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="page1.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="page2.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
